maxDepth() method for binary tree using recursion